--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+attrs==21.2.0
+certifi==2021.5.30
+click==8.0.1
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.4
 ezdxf==0.16.6
+Fiona @ file:///C:/Yannis/00_File_Merger/file_merger/libs/Fiona-1.8.20-cp37-cp37m-win_amd64.whl
+GDAL @ file:///C:/Yannis/00_File_Merger/file_merger/libs/GDAL-3.3.2-cp37-cp37m-win_amd64.whl
+importlib-metadata==4.8.1
+munch==2.5.0
 numpy==1.21.2
 pandas==1.1.5
 pyparsing==2.4.7
 python-dateutil==2.8.2
 pytz==2021.1
+Shapely @ file:///C:/Yannis/00_File_Merger/file_merger/libs/Shapely-1.7.1-cp37-cp37m-win_amd64.whl
 six==1.16.0
 typing-extensions==3.10.0.2
+zipp==3.5.0
